@@ -1,4 +1,7 @@
  20100118 (T.S.)
+ - BUGFIX - src/udpCommBSD.c: make sure udpComm routines don't pass the return
+   value of system calls (like 'connect') but the negative 'errno' value.
+ 20100118 (T.S.)
  - src/sddsrd.c, src/sddsrd.h: added support for 32-bit stream data.
  20100118 (T.S.)
  - src/padStream.c, src/padStream.h:
